Added pg and rails_12factor gems for Heroku

--- a/app/views/ginlovers/index.html.erb
+++ b/app/views/ginlovers/index.html.erb
@@ -4,7 +4,7 @@
 	
 </head>
   <body>
-    <%= video_tag "Video.mp4", :class => "grid_video hide", :autoplay => false, :controls => true %>
+    <iframe width="560" height="315"  class="gird_video hide" src="https://www.youtube.com/embed/5kVtmnZNC8w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     <div class='box transform'></div>
 	     <div id='cover' class='transform'></div>
           <section id='home'>
