image working with path_asset

--- a/app/assets/stylesheets/ginlovers.css.erb
+++ b/app/assets/stylesheets/ginlovers.css.erb
@@ -35,11 +35,11 @@ grid-template-rows:1fr  500px 1fr;
 }
 
 #header{
-  
-  background-image: url(<%= asset_path 'GinBackground.png' %>)
-  background-size: cover;
-  background-position: center;
-    background-repeat: no-repeat;
+
+background-image: url(<%= asset_path 'GinBackground.png' %>);
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
 width:100%;
 height:100vh;
 }
