--- a/app/assets/stylesheets/ginlovers.css.erb
+++ b/app/assets/stylesheets/ginlovers.css.erb
@@ -36,7 +36,8 @@ grid-template-rows:1fr  500px 1fr;
 
 #header{
 
-background-image: url(<%= asset_path 'GinBackground.png' %>);
+background-image: url(<%= asset_data_uri 'GinBackground.png' %>);
+
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
