--- a/app/assets/stylesheets/ginlovers.css.scss
+++ b/app/assets/stylesheets/ginlovers.css.scss
@@ -35,8 +35,7 @@ grid-template-rows:1fr  500px 1fr;
 }
 
 #header{
-
-background-image: url(<%= asset_data_uri 'GinBackground.png' %>);
+background-image: image-url("GinBackground.png");
 
 background-size: cover;
 background-position: center;
