--- a/app/assets/stylesheets/ginlovers.css.scss
+++ b/app/assets/stylesheets/ginlovers.css.scss
@@ -35,7 +35,8 @@ grid-template-rows:1fr  500px 1fr;
 }
 
 #header{
-background-image: image-url("GinBackground.png");
+
+background-image: asset-data-url("GinBackground.png");
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
